[project]
name = "shop-assistant"
version = "0.1.0"
description = "Conversational shop assistant API powered by LangGraph and FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "langgraph>=0.4",
    "langchain-openai>=0.3",
    "langchain-core>=0.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pydantic-settings>=2.0",
    "alembic>=1.14",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "python-multipart>=0.0.9",
]

[tool.setuptools.packages.find]
include = ["app*"]
